# Kraken

Kraken/: CMakeLists.txt
Kraken/src/: Entity.cpp  Entity.h  Game.h  OrthographicCamera.cpp  OrthographicCamera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h
Sandbox/: CMakeLists.txt  MakeFile
Sandbox/res/: test.Shader
Sandbox/src/: main.cpp
